Tests are working great to debug what is going on